Liste des forums et début du panel forum/catégorie

--- a/app/assets/stylesheets/darkly.scss
+++ b/app/assets/stylesheets/darkly.scss
@@ -167,8 +167,8 @@
  }
  
  a:hover {
-   color: #fff;
-   text-decoration: underline;
+  color: #18BC9C;
+  text-decoration: none;
  }
  
  a:not([href]):not([tabindex]) {
@@ -10361,7 +10361,7 @@ button.bg-primary:focus {
  }
  
  .text-primary {
-   color: #375a7f !important;
+   color: #506d8b !important;
  }
  
  a.text-primary:hover, a.text-primary:focus {
