--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,6 +14,11 @@
           <% end %>
         </li>
         <li class="nav-item">
+          <%= link_to forums_path, class: "nav-link" do %>
+            <%= fa_icon "comments" %>
+          <% end %>
+        </li>
+        <li class="nav-item">
           <a class="nav-link pointer" onclick="darkLight()" id="checkBox" data-turbolinks="false">
             <%= fa_icon "lightbulb" %>
           </a>
