--- a/app/views/staff/edit.html.erb
+++ b/app/views/staff/edit.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Retour à la gestion des rôles", roles_staff_index_path, class: "btn btn-primary mb-4" %>
+<%= link_to "Retour à la gestion des rôles", panel_staff_index_path, class: "btn btn-primary mb-4" %>
 <%= simple_form_for @role, url: staff_path(@role), wrapper: :input_group do |f| %>
   <%= render partial: "form", locals: { f: f } %>
   <%= f.button :submit, value: "Valider", class: "btn-primary btn-block" %><br />
