Suppresion du cache turbolinks

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,7 +19,7 @@
           <% end %>
         </li>
         <li class="nav-item">
-          <a class="nav-link pointer" onclick="darkLight()" id="checkBox" data-turbolinks="false">
+          <a class="nav-link pointer" onclick="darkLight()" id="checkBox">
             <%= fa_icon "lightbulb" %>
           </a>
         </li>
