Début des topics/messages

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,20 @@
+.topics {
+	.status {
+		width: 5%;
+	}
+	.subject {
+		width: 50%;
+	}
+	.author {
+		width: 10%;
+	}
+	.nb {
+		width: 5%;
+	}
+	.last {
+		width: 30%;
+	}
+}
 a {
 	text-decoration: none!important;
 }
