--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -5,13 +5,13 @@
       <ul class="list-group list-group-flush">
         <% category.forums.each do |forum| %>
           <% if PermissionsService.can_access_to_forum?(current_user, forum) %>
-            <a href="/" class="list-group-item border-0">
+            <%= link_to forum_path(forum), class: "list-group-item border-0" do %>
               <td>
                 <strong><%= fa_icon "chevron-circle-right", class:" mr-2" %> <%= forum.name %></strong><br />
                 <div class="text-primary"><%= forum.description %></div>
                 <div class="text-muted mt-1"><%= fa_icon "chart-line", class:" mr-2" %> <%= forum.count_topics %> sujets, <%= forum.count_messages %> messages</div>
               </td>
-            </a>
+            <% end %>
           <% end %>
         <% end %>
       </ul>
