--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -3,7 +3,9 @@
   <ul class="list-group list-group-flush">
     <% Forum.all.each do |forum| %>
       <% if PermissionsService.can_access_to_forum?(current_user, forum) %>
-        <a href="#" class="list-group-item"><i class="fas fa-chevron-circle-right mr-2"></i> <%= forum.name %></a>
+        <%= link_to forum_path(forum), class: "list-group-item" do %>
+          <%= fa_icon "chevron-circle-right", class: "mr-2" %> <%= forum.name %>
+        <% end %>
       <% end %>
     <% end %>
   </ul>
