--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,7 +49,7 @@
             <%= fa_icon "calendar", class: "mr-1" %> <strong>Membre depuis</strong>
           </li>
           <li class="list-group-item">
-            <span class="float-right">0</span>
+            <span class="float-right"><%= @user.count_messages %></span>
             <%= fa_icon "comment-dots", class: "mr-1" %> <strong>Messages postés</strong>
           </li>
         </ul>
