--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,3 +1,6 @@
+<% if @topic.errors.full_messages.any? %>
+  <%= link_to "Retour", forum_topic_path(@forum, @topic), class: "btn btn-primary mb-3" %>
+<% end %>
 <div class="card mb-4">
   <div class="card-body">
     <h4 class="card-title"><%= fa_icon "reply", class:" mr-1" %> Répondre au sujet</h4>
