--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -1,3 +1,6 @@
+<% if @topic.errors.full_messages.any? %>
+  <%= link_to "Retour", forum_path(@forum), class: "btn btn-primary mb-3" %>
+<% end %>
 <div class="card mb-4">
   <div class="card-body">
     <h4 class="card-title"><%= fa_icon "comment-dots", class:" mr-1" %> Poster un sujet</h4>
