--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,6 +1,6 @@
 <div class="card mb-4">
   <div class="card-body">
-    <h4 class="card-title"><%= fa_icon "comment-dots", class:" mr-1" %> <%= @topic.title %></h4>
+    <h4 class="card-title"><%= fa_icon "comment-dots", class:" mr-1" %> « <%= @topic.title %> »</h4>
     <%= link_to "Liste des sujets", forum_path(@forum), class: "btn btn-primary" %>
   </div>
 </div>
