--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -21,10 +21,10 @@
             <% @topics.each do |topic| %>
               <tr onclick="Turbolinks.visit('<%= forum_topic_path(@forum, topic) %>');" class="pointer">
                 <th class="text-center"><%= display_topic_status(topic.status) %></th>
-                <th><%= topic.title %></th>
+                <td><%= topic.title %></td>
                 <td class="text-center"><%= display_role_user(topic.user) %></td>
                 <td class="text-center"><%= topic.count_messages %></td>
-                <td class="text-center"><%= display_datetime(topic.last_message) %></td>
+                <td class="text-center"><%= display_datetime(topic.last_message, nil, "short") %></td>
               </tr>
             <% end %>
           </tbody>
@@ -33,5 +33,7 @@
     <% end %>
   </div>
 </div>
+
+<%= will_paginate @topics, list_classes: %w(pagination justify-content-center), page_links: false %>
 
 <%= render file: '/topics/new' %>
