fix hover on td subject

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -31,7 +31,7 @@
 		padding-bottom: 6px!important;
 		font-size: 14px!important;
 	}
-	tbody>tr:hover>td.title {
+	tbody>tr:hover>td.subject {
 		color: #18BC9C!important;
 	}
 }
