--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -54,6 +54,15 @@ pre{
 	}
 }
 }
+#col-avatar {
+	flex: 0 0 80%!important;
+	max-width: 80%!important;
+}
+#sidebar-avatar {
+	flex: 0 0 20%!important;
+	max-width: 20%!important;
+	margin-right: -15px!important;
+}
 #home,#help{
 	font-size:0.9rem
 }
@@ -253,9 +262,6 @@ pre{
 			display: none;
 		}
 	}
-	.messages #col-avatar {
-		padding-left: 15px!important;
-	}
 	.section-preview .image img{
 		width:100%
 }
@@ -278,7 +284,11 @@ pre{
 	font-size:10px
 }
 @media (max-width: 767px){
-
+	#col-avatar {
+		flex: 0 0 100%!important;
+		max-width: 100%!important;
+		padding-right: 15px!important;
+	}
 	.messages {
 		#sidebar-avatar {
 			display: none;
@@ -346,8 +356,10 @@ h3, .h3 {
 }
 @media (max-width: 992px) {
 	#col-avatar {
-		padding-left: 20px!important;
+		margin-left: 0px!important;
+		padding-right: 0;
 	}
+
 	ul.navbar-nav.mr-auto li a {
 		margin-right: 16px;
 	}
@@ -371,8 +383,23 @@ h3, .h3 {
 	}
 }
 
+#small {
+	font-size: 13px!important;
+}
+
 @media (max-width: 1200px) {
 	#col-avatar {
-		padding-left: 35px;
+		margin-left: 15px;
 	}
+}
+
+@media (min-width: 1200px) {
+	#col-avatar {
+		padding-left: 5px;
+		padding-right: 0px;
+	}
+}
+
+#avatar-messages {
+	margin-right: -15px!important;
 }
