remove static msg / argent

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -17,10 +17,10 @@
               <img class="rounded mb-2" style="height: 100px; width: 100px;" src="<%= message.user.avatar_url %>" alt="">
               <div id="avatar-messages">
                 <small>
-                  <%= fa_icon "comment-alt", class: "mr-1" %> Messages : <%= message.user.count_messages %>5467
+                  <%= fa_icon "comment-alt", class: "mr-1" %> Messages : <%= message.user.count_messages %>
                 </small><br />
                 <small>
-                  <%= fa_icon "coins", class: "mr-1" %> Argent : <%= sprintf("%g", message.user.coin) %>554 €
+                  <%= fa_icon "coins", class: "mr-1" %> Argent : <%= sprintf("%g", message.user.coin) %> €
                 </small>
               </div>
             </span>
