--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -32,7 +32,7 @@
               <small>Posté <%= display_datetime(message.created_at, "text") %></small>
             </div>
             <hr />
-            <%= message.content.bbcode_to_html.html_safe %>
+            <%= message.content.bbcode_to_html.gsub(/\n/, '<br/>').html_safe %>
           </div>
         </div>
       </div>
