--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -10,7 +10,7 @@
 <div class="messages">
   <% @messages.each do |message| %>
     <div class="card mb-4">
-      <div class="card-body">
+      <div class="card-body" id="<%= message.id %>">
         <div class="row">
           <div class="col-lg-2" id="sidebar-avatar">
             <span id="small">
