--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -6,7 +6,7 @@
     <h4 class="card-title"><%= fa_icon "comment-dots", class:" mr-1" %> Poster un sujet</h4>
     <div class="card-text mt-3">
       <% if @current_user %>
-        <%= f.input :title, prepend: fa_icon("signature"), placeholder: "Title" %>
+        <%= f.input :title, prepend: fa_icon("signature"), placeholder: "Titre" %>
         <%= f.simple_fields_for :messages do |m| %>
           <%= m.input :content, as: :text, prepend: fa_icon("comment-alt"), placeholder: "Message" %>
         <% end %>
