--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -2,7 +2,7 @@
   <%= link_to "Retour", forum_topic_path(@forum, @topic), class: "btn btn-primary mb-3" %>
 <% end %>
 <div class="card mb-4">
-  <div class="card-body">
+  <div class="card-body" id="reply">
     <h4 class="card-title"><%= fa_icon "reply", class:" mr-1" %> Répondre au sujet</h4>
     <div class="card-text mt-3">
       <% if @current_user %>
