Ajout des bbcodes

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -403,3 +403,8 @@ h3, .h3 {
 #avatar-messages {
 	margin-right: -15px!important;
 }
+.btn-bbcoder {
+	min-width: 40px;
+	margin: 0;
+	padding: 0;
+}
