--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -6,7 +6,8 @@
     <h4 class="card-title"><%= fa_icon "reply", class:" mr-1" %> Répondre au sujet</h4>
     <div class="card-text mt-3">
       <% if @current_user %>
-        <%= f.input :content, as: :text, prepend: fa_icon("comment-alt"), placeholder: "Message" %>
+        <%= render partial: '/shared/bbcoder' %>
+        <%= f.input :content, as: :text, prepend: fa_icon("comment-alt"), placeholder: "Message", input_html: { rows: 5, id: "bbcoder" } %>
         <%= f.button :submit, value: "Valider", class: "btn-primary" %>
       <% else %>
         <div class="alert alert-warning">Vous devez être <b><%= link_to "inscris", new_user_registration_path %></b> et <b><%= link_to "connecté", new_user_session_path %></b> pour répondre au sujet</div>
