--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -408,3 +408,10 @@ h3, .h3 {
 	margin: 0;
 	padding: 0;
 }
+.smiley {
+	vertical-align: baseline;
+	width: 68px;
+	height: 51px;
+	margin-left: 5px;
+	margin-bottom: -1px;
+}
