--- a/app/views/shared/_bbcoder.html.erb
+++ b/app/views/shared/_bbcoder.html.erb
@@ -1,12 +1,13 @@
 <div class="mb-3">
-  <%= content_tag(:a, fa_icon("bold"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder", onclick: "javascript:bbcoder('B')") %>
-  <%= content_tag(:a, fa_icon("italic"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder", onclick: "javascript:bbcoder('I')") %>
-  <%= content_tag(:a, fa_icon("underline"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder", onclick: "javascript:bbcoder('U')") %>
-  <%= content_tag(:a, fa_icon("strikethrough"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder", onclick: "javascript:bbcoder('S')") %>
-  <%= content_tag(:a, fa_icon("align-left"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder", onclick: "javascript:bbcoder('LEFT')") %>
-  <%= content_tag(:a, fa_icon("align-center"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder", onclick: "javascript:bbcoder('CENTER')") %>
-  <%= content_tag(:a, fa_icon("align-right"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder", onclick: "javascript:bbcoder('RIGHT')") %>
-  <%= content_tag(:a, fa_icon("image"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder", onclick: "javascript:bbcoder('IMAGE')") %>
-  <%= content_tag(:a, fa_icon("video"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder", onclick: "javascript:bbcoder('YOUTUBE')") %>
-  <%= content_tag(:a, fa_icon("link"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder", onclick: "javascript:bbcoder('LINK')") %>
+  <%= content_tag(:a, fa_icon("bold"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder mr-1 mb-2", onclick: "javascript:bbcoder('B')") %>
+  <%= content_tag(:a, fa_icon("italic"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder mr-1 mb-2", onclick: "javascript:bbcoder('I')") %>
+  <%= content_tag(:a, fa_icon("underline"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder mr-1 mb-2", onclick: "javascript:bbcoder('U')") %>
+  <%= content_tag(:a, fa_icon("strikethrough"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder mr-1 mb-2", onclick: "javascript:bbcoder('S')") %>
+  <%= content_tag(:a, fa_icon("align-left"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder mr-1 mb-2", onclick: "javascript:bbcoder('LEFT')") %>
+  <%= content_tag(:a, fa_icon("align-center"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder mr-1 mb-2", onclick: "javascript:bbcoder('CENTER')") %>
+  <%= content_tag(:a, fa_icon("align-right"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder mr-1 mb-2", onclick: "javascript:bbcoder('RIGHT')") %>
+  <%= content_tag(:a, fa_icon("image"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder mr-1 mb-2", onclick: "javascript:bbcoder('IMAGE')") %>
+  <%= content_tag(:a, fa_icon("video"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder mr-1 mb-2", onclick: "javascript:bbcoder('YOUTUBE')") %>
+  <%= content_tag(:a, fa_icon("link"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder mr-1 mb-2", onclick: "javascript:bbcoder('LINK')") %>
+  <%= content_tag(:a, image_tag("https://risibank.fr/src/picts/banner-light.png", style: "width: 120px"), href: "javascript:void(0);", class: "btn btn-secondary btn-bbcoder mr-1 mb-2", onclick: "RisiBank.activate('bbcoder')") %>
 </div>
