fix smiley position dark theme

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -411,7 +411,7 @@ h3, .h3 {
 	padding: 0;
 }
 .smiley {
-	vertical-align: baseline;
+	vertical-align: baseline!important;
 	width: 68px;
 	height: 51px;
 	margin-left: 5px;
