--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,6 @@
+body {
+	margin-top: 82px!important;
+}
 .page-link {
     background-color: #95a5a6!important;
     border-color: #95a5a6!important;
