--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1006,6 +1006,8 @@ h3, .h3 {
 #risiback {
 	display: none;
 }
-pre {
-	padding: 10px
+#preview-content {
+	padding: 15px;
+	background-color: #f7f7f9;
+	margin-bottom: 20px;
 }
