--- a/app/assets/stylesheets/darkly.scss
+++ b/app/assets/stylesheets/darkly.scss
@@ -10750,3 +10750,9 @@ button.bg-primary:focus {
    color: #fff;
  }
 }
+body.dark #preview-content {
+	padding: 15px;
+	margin-bottom: 20px;
+	background-color: #535353!important;
+	color: #a0a7ae;
+}
