--- a/app/assets/stylesheets/flatly.scss
+++ b/app/assets/stylesheets/flatly.scss
@@ -10743,3 +10743,9 @@
  .modal .close:not(:disabled):not(.disabled):hover, .modal .close:not(:disabled):not(.disabled):focus {
    color: #000;
  }
+
+ #preview-content {
+	padding: 15px;
+	margin-bottom: 20px;
+	background-color: #f7f7f9;
+}
