--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -4,8 +4,8 @@
 
 <div class="messages">
   <% @messages.each do |message| %>
-    <div class="card mb-4">
-      <div class="card-body" id="<%= message.id %>">
+    <div class="card mb-4 topic-message" id="<%= message.id %>">
+      <div class="card-body">
         <div class="row">
           <div class="col-lg-2" id="sidebar-avatar">
             <span id="small">
@@ -23,7 +23,7 @@
           <div class="col-lg-10" id="col-avatar">
             <img class="rounded float-left mr-3" id="navbar-avatar" style="height: 50px; width: 50px;" src="<%= message.user.avatar_url %>" alt="">
             <div>
-              <strong><%= link_to display_role_user(message.user), user_path(message.user.username) %></strong><br />
+              <strong id="author"><%= link_to display_role_user(message.user), user_path(message.user.username) %></strong><br />
               <small>Posté <%= display_datetime(message.created_at, "text") %></small>
             </div>
             <hr />
