--- a/app/assets/stylesheets/flatly.scss
+++ b/app/assets/stylesheets/flatly.scss
@@ -10743,7 +10743,7 @@
  .modal .close:not(:disabled):not(.disabled):hover, .modal .close:not(:disabled):not(.disabled):focus {
    color: #000;
  }
-body.dark .quote {
+.quote {
 	padding: 15px;
 	background-color: #f7f7f9!important;
 	color: #a0a7ae;
