--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -1,7 +1,7 @@
 <div class="card mb-4">
   <div class="card-body">
     <%= content_tag(:span,
-          content_tag(:button, fa_icon("sync-alt", class: "rotate", id: "icon-refresh"), class: "btn btn-primary"
+          content_tag(:button, fa_icon("sync-alt"), class: "btn btn-primary"
         ), class: "float-right", id: "btn-refresh") %>
     <h4 class="card-title mb-0"><%= fa_icon "comment", class:" mr-1" %> <%= @forum.name %></h4>
   </div>
