--- a/app/views/topics/_header.html.erb
+++ b/app/views/topics/_header.html.erb
@@ -4,7 +4,7 @@
     <%= content_tag(:a, "Répondre", href: "#reply", class: "btn btn-primary") %>
     <%= link_to content_tag(:span, "Liste des sujets"), forum_path(@forum), class: "btn btn-primary ml-1", id: "topics-list" %>
     <%= content_tag(:span,
-          content_tag(:button, fa_icon("sync-alt", class: "rotate", id: "icon-refresh"), class: "btn btn-primary"
+          content_tag(:button, fa_icon("sync-alt"), class: "btn btn-primary"
         ), class: "float-right", id: "btn-refresh") %>
   </div>
 </div>
