--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1031,3 +1031,11 @@ h3, .h3 {
     -webkit-transform:rotate(90deg);
     transform:rotate(90deg);
 }
+.quote {
+	margin: 0;
+	padding: 10px;
+	border-left-style: solid;
+	border-left-width: 5px;
+	background: var(--quote-primary-background);
+	color: var(--quote-color);
+}
