--- a/app/assets/stylesheets/darkly.scss
+++ b/app/assets/stylesheets/darkly.scss
@@ -10753,4 +10753,10 @@ button.bg-primary:focus {
 body.dark .quote {
 	background-color: #535353!important;
 	color: #a0a7ae;
+	margin: 0;
+	padding: 10px;
+	border-left-style: solid;
+	border-left-width: 5px;
+	background: var(--quote-primary-background);
+	color: var(--quote-color);
 }
